# rpcX

./: .gitignore  Cargo.toml  ReadME.md
examples/tentacles-parser/: Cargo.toml
examples/tentacles-parser/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
rpcX/: Cargo.toml
rpcX/examples/: debug_discriminator.rs
rpcX/src/: main.rs
sdk/: Cargo.toml
sdk/src/: account.rs  discriminator.rs  error.rs  instruction.rs  lib.rs  parser.rs  prelude.rs  serialization.rs  transformer.rs  utils.rs
solana-rpcx-bindings/: .gitignore  Cargo.toml
solana-rpcx-bindings/src/: bindings.rs  lib.rs
