[workspace]
members = [ 
    "examples/tentacles-parser", 
    "macros", "rpcX", 
    "sdk",
    "solana-rpcx-bindings",
]
resolver = "2"

[workspace.dependencies]
borsh = { version = "=1.5.7", features = ["derive"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
bs58 = "0.4"
once_cell = "1.21.3"
