[package]
name = "solana-rpcx-sdk"
description = "SDK for build rpcx packages"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-rpcx-bindings = { path = "../solana-rpcx-bindings" }
solana-rpcx-macros = { path = "../macros", optional = true }
borsh = "1.5.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
bs58 = "0.4"

[features]
default = []
macros = ["solana-rpcx-macros"]