[package]
name = "solana-rpcx-sdk"
description = "SDK for build rpcx packages"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-rpcx-bindings = { path = "../solana-rpcx-bindings" }
solana-rpcx-macros = { path = "../macros", optional = true }
borsh = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
sha2 = { workspace = true}
bs58 = { workspace = true}

anchor-lang = { version = "0.30.1", optional = true }

[features]
default = []
macros = ["solana-rpcx-macros"]
anchor = ["anchor-lang"]