[package]
name = "solana-rpcx-bindings"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.component]
package = "component:solana-rpcx-bindings"

[package.metadata.component.dependencies]
